# MRT_ASSIGNMENT_6

./: README.md
install/: local_setup.sh  setup.sh
install/four_wheel_robot/lib/four_wheel_robot_description/: move_circle
install/four_wheel_robot/share/four_wheel_robot/: package.sh
install/four_wheel_robot/share/four_wheel_robot/configs/: robot_config.rviz
install/four_wheel_robot/share/four_wheel_robot/models/: robot_models.sdf
log/: latest_build
src/four_wheel_robot/: package.xml  setup.cfg  setup.py
src/four_wheel_robot/models/Final_Robot/: model.config  model.sdf
src/four_wheel_robot/urdf/: robot.urdf.xacro
