<?xml version="1.0"?>
<package format="3">
  <name>four_wheel_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rishith@todo.todo">rishith</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros2launch</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ament_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

